# Lik_ML

./: CMakeLists.txt  README.md  main.cpp
example/: example.h  example_XO.cpp  example_xor.cpp
function/math/: activation.hpp  loss.hpp  operation.cpp  operation.h
function/tool/: random.hpp
layer/: Layer.cpp  Layer.h
layer/bases/: FullyConnected.cpp  FullyConnected.h  Loss.cpp  Loss.h
layer/conv/: Convolution2D.cpp  Convolution2D.h
module/: SequentialModule.cpp  SequentialModule.h
type/: type.cpp  type.h
